samples/_failures_safe/1761040413_9df993_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7935d45b.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_7935d45b.c:159:16: error: missing terminating " character
  159 |         printf("Token %zu: %s -> '%s
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7935d45b.c:159:9: error: expected expression at end of input
  159 |         printf("Token %zu: %s -> '%s
      |         ^~~~~~
./samples/SAFE/__tmp_7935d45b.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7935d45b.c:159:9: error: expected declaration or statement at end of input
